--- a/start/css/HTMLObjectsContainer.css
+++ b/start/css/HTMLObjectsContainer.css
@@ -34,6 +34,7 @@
 /*對話框*/
 .dialog
 {
+    z-index: 1;
     width: 100%;
     position: absolute;
     height: 6em;
@@ -44,10 +45,26 @@
     left: 0;
     border-radius: 0.3em;
     background-color:#f8f8f8e8;
-}/*選項*/
+}
+/*yes no 對話框*/
+.yesNo
+{
+    z-index: 4;
+    position: absolute;
+    right: 0;
+    max-height: 20%;
+    width:15%;
+    bottom:40%;
+    background-color:#f8f8f8e8;
+}
+/*選項*/
 
 /*非被選中的選項*/
 /*左側預留空位給箭頭*/
+.option
+{
+    line-height: 1em;
+}
 .option:not(.select)
 {
     margin-left:0.5em; 
@@ -57,6 +74,7 @@
 /*css border三角形形成箭頭選取*/
 .option.select::before
 {
+    
     content: '';
     border-style: solid;
     display:inline-block;   
