--- a/start/css/HTMLObjectsContainer.css
+++ b/start/css/HTMLObjectsContainer.css
@@ -31,6 +31,10 @@
     margin: auto;
     font-family: MBitmapSquareHK,sans-serif;
 }
+.HTMLObjectContainer *
+{
+    background-color:#f8f8f8e8;
+}
 /*對話框*/
 .dialog
 {
@@ -44,7 +48,7 @@
     bottom:0;
     left: 0;
     border-radius: 0.3em;
-    background-color:#f8f8f8e8;
+   
 }
 /*yes no 對話框*/
 .yesNo
@@ -55,7 +59,6 @@
     max-height: 20%;
     width:15%;
     bottom:40%;
-    background-color:#f8f8f8e8;
 }
 /*選項*/
 
@@ -68,6 +71,14 @@
 .option:not(.select)
 {
     margin-left:0.5em; 
+}
+/*選項清單*/
+.options
+{
+    position: absolute;
+    right: 0;
+    top:10px;
+    max-height: calc(60% - 10px);
 }
 
 /*被選中的選項*/
