--- a/start/css/HTMLObjectsContainer.css
+++ b/start/css/HTMLObjectsContainer.css
@@ -98,3 +98,257 @@
     border-width: 0.3em 0 0.3em 0.5em;
     border-color: transparent transparent transparent #000;
 }
+
+/* ======================================== 戰鬥面板 ======================================== */
+#battlePad * { box-sizing: border-box; background: transparent; }
+
+#battlePad span {
+    --std-font-size: 2rem;
+    --std-line-height: 2.5rem;
+    --sm-font-size: 1.5rem;
+    --sm-line-height: 2rem;
+}
+
+#battlePad label {
+    --std-font-size: 1.5rem;
+    --std-line-height: 2rem;
+    --lg-font-size: 2rem;
+    --lg-line-height: 2.5rem;
+}
+
+/* 戰鬥面板: 包含了所有寶可夢戰鬥時所需要的資訊 */
+#battlePad {
+    position: relative;
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    font-weight: 900;
+}
+
+/* 敵方寶可夢的訊息面板(寶可夢名稱、等級、生命條) */
+#battlePad #opponentPad {
+    position: absolute;
+    top: 20px; left: 20px;
+    width: 450px;
+    height: 180px;
+    background-image: url('../image/OpponentPokemonBar.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: transparent;
+    
+    /* border: 1px solid black; */
+}
+
+/* 玩家方寶可夢的訊息面板(寶可夢名稱、等級、生命條、生命數值) */
+#battlePad #playerPad {
+    position: absolute;
+    bottom: 250px; right: 20px;
+    width: 400px;
+    height: 200px;
+    background-image: url('../image/PlayerPokemonBar.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: transparent;
+    background-position: right bottom;
+    
+    /* border: 1px solid black; */
+}
+
+/* 戰鬥訊息面板 */
+#battlePad #messagePad {
+    position: absolute;
+    bottom: 10px; left: 10px;
+    width: calc(100% - 20px);
+    height: 230px;
+    background: white;
+    border: 42px solid black;
+    border-image: url('../image/Pokemonborder.png') 88 round;
+    z-index: 0;
+}
+
+/* 主功能選單(戰鬥、道具、寶可夢、逃走) */
+#battlePad #menuPad {
+    position: absolute;
+    bottom: 10px; right: 10px;
+    width: calc(100% / 1.75);
+    height: 230px;
+    background: white;
+    border: 42px solid black;
+    border-image: url('../image/Pokemonborder.png') 88 round;
+    z-index: 1;
+}
+
+/* 在訊息面板中，顯示「寶可夢的名稱」 */
+#battlePad span.pokemon-name {
+    position: absolute;
+    top: 10px; left: 10px;
+    font-size: var(--std-font-size);
+    line-height: var(--std-line-height);
+
+    /* border: 1px solid black; */
+}
+
+/* 在訊息面板中，顯示「等級」 */
+#battlePad span.level {
+    position: absolute;
+    top: 54px; left: 100px;
+    font-size: var(--std-font-size);
+    line-height: var(--std-line-height);
+
+    /* border: 1px solid black; */
+}
+
+/* 在訊息面板中，顯示文字「HP」 */
+#battlePad label.hp-text {
+    position: absolute;
+    top: 100px; left: 40px;
+    background: transparent;
+    font-size: var(--std-font-size);
+    font-weight: 900;
+    line-height: var(--std-line-height);
+    transform: scaleX(1.5);
+}
+
+/* 在訊息面板中，顯示「生命條容器」 */
+#battlePad .hp-bar-container {
+    position: absolute;
+    top: 107px; left: 80px;
+    width: 70%;
+    height: 21px;
+    background: white;
+    border: 7px solid transparent;
+    border-image: url('../image/HPBarBorder.png') 2 round;
+    /* border-radius: 20px; */
+    overflow: hidden;
+}
+
+/* 在訊息面板中的「生命條容器」中，顯示「生命條」樣式 */
+#battlePad .hp-bar-container > .hp-bar {
+    background: lime;
+    width: 100%;
+    height: 100%;
+}
+
+/* 在玩家訊息面板中，顯示「生命數值」的樣式 */
+#battlePad span.player-hp-value {
+    position: absolute;
+    bottom: 25px; left: 200px;
+    background: transparent;
+    font-size: var(--std-font-size);
+    font-weight: 900;
+    line-height: var(--std-line-height);
+    transform: scale(1.8, 1.2);
+}
+
+/* 「主功能選單」面板的樣式 */
+#battlePad #menuPad span { position: absolute; font-size: 3rem; line-height: 3.5rem; }
+
+/* 在「主功能選單」之下，標籤「戰鬥」、「背包」、「寶可夢」、「逃跑」等的標籤。 */
+#battlePad #menuPad span:nth-child(1) { top: 10px; left: 60px; }
+#battlePad #menuPad span:nth-child(2) { bottom: 10px; left: 60px; }
+#battlePad #menuPad span:nth-child(3) { top: 10px; right: 50px; }
+#battlePad #menuPad span:nth-child(4) { bottom: 10px; right: 100px; }
+
+/* 「招式清單」面板的樣式 */
+#battlePad #moveListPad {
+    position: absolute;
+    bottom: 10px; right: 10px;
+    width: calc(100% / 1.3);
+    height: 230px;
+    background: white;
+    border: 42px solid black;
+    border-image: url('../image/Pokemonborder.png') 88 round;
+    z-index: 2;
+}
+
+/* 在「招式清單」面板中，四個招式選項的樣式 */
+#battlePad #moveListPad span.move-name {
+    position: absolute;
+    left: 40px;
+    font-size: var(--std-font-size);
+    line-height: var(--std-line-height);
+    --first-move-top: -7px;
+    --space-between-moves: 40px;
+}
+
+/* 在「招式清單」面板中，四個招式選項的上下位置調整 */
+#battlePad #moveListPad span.move-name:nth-child(1) { top: calc(var(--first-move-top)); }
+#battlePad #moveListPad span.move-name:nth-child(2) { top: calc(var(--first-move-top) + var(--space-between-moves)); }
+#battlePad #moveListPad span.move-name:nth-child(3) { top: calc(var(--first-move-top) + 2 * var(--space-between-moves)); }
+#battlePad #moveListPad span.move-name:nth-child(4) { top: calc(var(--first-move-top) + 3 * var(--space-between-moves)); }
+
+/* 「招式訊息」版面的樣式 */
+#battlePad #moveInfoPad {
+    position: absolute;
+    bottom: 203px; left: 10px;
+    width: calc(100% / 2);
+    height: 200px;
+    background: white;
+    border: 42px solid black;
+    border-image: url('../image/Pokemonborder.png') 88 round;
+    z-index: 3;
+}
+
+/* 在招式訊息」版面下，文字「TYPE/」的樣式 */
+#battlePad #moveInfoPad label.text-type {
+    position: absolute;
+    top: 0; left: 40px;
+    font-size: var(--lg-font-size);
+    line-height: var(--lg-line-height);
+    transform: scaleX(2.2);
+}
+
+/* 在招式訊息」版面下，文字「TYPE/」的樣式 */
+#battlePad #moveInfoPad span.move-type {
+    position: absolute;
+    top: 40px; left: 125px;
+    font-size: var(--std-font-size);
+    line-height: var(--std-line-height);
+    transform: scale(1.5, 1.25);
+}
+
+/* 在「招式訊息」版面下，文字「TYPE/」的樣式 */
+#battlePad #moveInfoPad span.move-PP {
+    position: absolute;
+    bottom: -5px; right: 20px;
+    font-size: var(--std-font-size);
+    line-height: var(--std-line-height);
+    transform: scale(1.2, 1.15);
+}
+
+/* 「背包物品清單」版面的樣式 */
+#battlePad #backpackPad {
+    position: absolute;
+    bottom: 200px; right: 10px;
+    width: calc(100% / 1.25);
+    height: 65%;
+    background: white;
+    border: 42px solid white;
+    border-image: url('../image/Pokemonborder_white.png') 88 round;
+    overflow-y: scroll;
+    z-index: 2;
+}
+
+/* 在「背包物品清單」版面中，定義「背包物品」元件的樣式 */
+#battlePad #backpackPad > div.backpack-item {
+    position: relative;
+    height: 60px;
+    margin: 0 0 10px 40px;
+    background: white;
+}
+
+/* 在「背包物品清單」版面中的「背包物品」元件中，定義「物品名稱」的樣式 */
+#backpackPad > div.backpack-item > span.item-name {
+    display: block;
+    font-size: var(--std-font-size);
+    line-height: var(--std-line-height);
+}
+
+/* 在「背包物品清單」版面中的「背包物品」元件中，定義「數量」的樣式 */
+#backpackPad > div.backpack-item > span.item-amount {
+    position: absolute;
+    bottom: 10px;  right: 100px;
+    font-size: var(--sm-font-size);
+    line-height: var(--sm-line-height);
+    transform: scale(2, 1.5);
+}
