--- a/start/css/HTMLObjectsContainer.css
+++ b/start/css/HTMLObjectsContainer.css
@@ -27,11 +27,11 @@
     left:0;
     right:0;
     font-size: 3em;
-    line-height: 3em;
+    line-height: 2.5em;
     margin: auto;
     font-family: MBitmapSquareHK,sans-serif;
 }
-.HTMLObjectContainer *
+.HTMLObjectContainer *:not(.option)
 {
     box-sizing: border-box;
     background-color:#f8f8f8e8;
@@ -46,8 +46,8 @@
     width: 100%;
     position: absolute;
     height: 6em;
-    max-height: 40%;
-    min-width: 30%;
+    max-height: 50%;
+    min-width: 40%;
     overflow-y: scroll;
     bottom:0;
     left: 0;
@@ -83,9 +83,9 @@
     position: absolute;
     right: 0;
     top:unset;
-    max-height: 20%;
-    width:15%;
-    bottom:40%;
+    max-height: 25%;
+    min-width:15%;
+    bottom:calc(50% + 10px);
 }
 /*被選中的選項*/
 /*css border三角形形成箭頭選取*/
