修正 CSS樣式重疊問題

--- a/start/css/HTMLObjectsContainer.css
+++ b/start/css/HTMLObjectsContainer.css
@@ -100,7 +100,11 @@
 }
 
 /* ======================================== 戰鬥面板 ======================================== */
-#battlePad * { box-sizing: border-box; background: transparent; }
+#battlePad, #battlePad * {
+    box-sizing: border-box;
+    background: transparent;
+    border: none;
+}
 
 #battlePad span {
     --std-font-size: 2rem;
