變更 新增「寶可夢清單」版面之樣式，與樣式宣告整理

--- a/start/css/HTMLObjectsContainer.css
+++ b/start/css/HTMLObjectsContainer.css
@@ -99,26 +99,47 @@
     border-color: transparent transparent transparent #000;
 }
 
-/* ======================================== 戰鬥面板 ======================================== */
-#battlePad, #battlePad * {
+/* ================== !! 戰鬥版面、生命條、「寶可夢清單」版面中的共用變數初始化 !! ================== */
+#battlePad, #battlePad *, #pokemonList, #pokemonList * {
     box-sizing: border-box;
     background: transparent;
     border: none;
 }
 
-#battlePad span {
+span {
+    --lg-font-size: 3rem;
+    --lg-line-height: 3.5rem;
     --std-font-size: 2rem;
     --std-line-height: 2.5rem;
     --sm-font-size: 1.5rem;
     --sm-line-height: 2rem;
 }
 
-#battlePad label {
+label {
     --std-font-size: 1.5rem;
     --std-line-height: 2rem;
     --lg-font-size: 2rem;
     --lg-line-height: 2.5rem;
 }
+
+/* ======================================= 生命條樣式 ======================================= */
+.hp-bar-container {
+    position: absolute;
+    height: 20px;
+    width: 200px;
+    background: white;
+    border: 5px solid transparent;
+    border-image: url('../image/HPBarBorder.png') 2 round;
+    overflow: hidden;
+}
+
+.hp-bar {
+    background: lime;
+    width: 100%;
+    height: 100%;
+}
+
+/* ======================================== 戰鬥面板 ======================================== */
 
 /* 戰鬥面板: 包含了所有寶可夢戰鬥時所需要的資訊 */
 #battlePad {
@@ -182,6 +203,15 @@
     z-index: 1;
 }
 
+/* 「主功能選單」面板的樣式 */
+#battlePad #menuPad span { position: absolute; font-size: var(--lg-font-size); line-height: var(--lg-line-height); }
+
+/* 在「主功能選單」之下，標籤「戰鬥」、「背包」、「寶可夢」、「逃跑」等的標籤。 */
+#battlePad #menuPad span:nth-child(1) { top: 10px; left: 60px; }
+#battlePad #menuPad span:nth-child(2) { bottom: 10px; left: 60px; }
+#battlePad #menuPad span:nth-child(3) { top: 10px; right: 50px; }
+#battlePad #menuPad span:nth-child(4) { bottom: 10px; right: 100px; }
+
 /* 在訊息面板中，顯示「寶可夢的名稱」 */
 #battlePad span.pokemon-name {
     position: absolute;
@@ -198,8 +228,6 @@
     top: 54px; left: 100px;
     font-size: var(--std-font-size);
     line-height: var(--std-line-height);
-
-    /* border: 1px solid black; */
 }
 
 /* 在訊息面板中，顯示文字「HP」 */
@@ -217,12 +245,11 @@
 #battlePad .hp-bar-container {
     position: absolute;
     top: 107px; left: 80px;
+    height: 20px;
     width: 70%;
-    height: 21px;
     background: white;
-    border: 7px solid transparent;
+    border: 5px solid transparent;
     border-image: url('../image/HPBarBorder.png') 2 round;
-    /* border-radius: 20px; */
     overflow: hidden;
 }
 
@@ -243,15 +270,6 @@
     line-height: var(--std-line-height);
     transform: scale(1.8, 1.2);
 }
-
-/* 「主功能選單」面板的樣式 */
-#battlePad #menuPad span { position: absolute; font-size: 3rem; line-height: 3.5rem; }
-
-/* 在「主功能選單」之下，標籤「戰鬥」、「背包」、「寶可夢」、「逃跑」等的標籤。 */
-#battlePad #menuPad span:nth-child(1) { top: 10px; left: 60px; }
-#battlePad #menuPad span:nth-child(2) { bottom: 10px; left: 60px; }
-#battlePad #menuPad span:nth-child(3) { top: 10px; right: 50px; }
-#battlePad #menuPad span:nth-child(4) { bottom: 10px; right: 100px; }
 
 /* 「招式清單」面板的樣式 */
 #battlePad #moveListPad {
@@ -356,3 +374,124 @@
     line-height: var(--sm-line-height);
     transform: scale(2, 1.5);
 }
+
+/* ======================================== 「寶可夢清單」版面 ======================================== */
+/* 「寶可夢清單」版面的樣式 */
+#pokemonList {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: white;
+    z-index: 5;
+}
+
+/* 重置「寶可夢清單」版面的內所有元件的絕對位置屬性 */
+#pokemonList > div.pokemon-info-bar * { top: auto; bottom: auto; left: auto; right: auto; }
+
+/* 「寶可夢清單」版面的內的「寶可夢資料條」 */
+#pokemonList > div.pokemon-info-bar {
+    position: relative;
+    height: 95px;
+    z-index: 0;
+}
+
+/* 當「寶可夢資料條」被選取時，在前面所會出現的三角形 */
+#pokemonList > div.pokemon-info-bar.select::before {
+    display:inline-block;
+    position: absolute;
+    top: 30px;  left: 20px;
+    content: '';
+    border-style: solid;
+    border-width: 0.3em 0 0.3em 0.5em;
+    border-color: transparent transparent transparent #000;
+}
+
+/* 在「寶可夢資料條」中的寶可夢圖像 */
+#pokemonList > div.pokemon-info-bar > img {
+    position: absolute;
+    top: 15px;  left: 55px;
+    width: 75px;
+    height: 75px;
+    border: 1px solid black;
+}
+
+/* 在「寶可夢資料條」中的寶可夢圖示 */
+#pokemonList > div.pokemon-info-bar > .pokemon-name {
+    position: absolute;
+    top: 10px;  left: 140px;
+    font-size: var(--std-font-size);
+    line-height: var(--std-line-height);
+}
+
+/* 在「寶可夢資料條」中的寶可夢等級 */
+#pokemonList > div.pokemon-info-bar > .level {
+    top: 7px;  right: 250px;
+    transform: scaleX(1.25);
+}
+
+/* 在「寶可夢資料條」中的寶可夢生命條 */
+#pokemonList > div.pokemon-info-bar > .hp-bar-container {
+    bottom: 15px;  left: 190px;
+    width: 320px;
+}
+
+/* 在「寶可夢資料條」中的「HP:」文字 */
+#pokemonList > div.pokemon-info-bar > .hp-text {
+    bottom: 10px;  left: 145px;
+}
+
+/* 在「寶可夢資料條」中的生命值數值 */
+#pokemonList > div.pokemon-info-bar > .player-hp-value {
+    bottom: 10px;  right: 120px;
+}
+
+/* 「寶可夢清單」版面的內的訊息框 */
+#pokemonList > div.message-bar {
+    position: absolute;
+    bottom: 0px;  left: 0px;
+    width: 100%;
+    height: 230px;
+    background-color: white;
+    border: 48px solid transparent;
+    border-image: url('../image/Pokemonborder_white.png') 88 round;
+    z-index: 0;
+}
+
+/* 「寶可夢清單」版面的內的選取方塊 */
+#pokemonList > div.menu {
+    position: absolute;
+    bottom: 0;  right: 0;
+    width: 350px;
+    height: 300px;
+    background-color: white;
+    border: 48px solid transparent;
+    border-image: url('../image/Pokemonborder_white.png') 88 round;
+    z-index: 1;
+}
+
+/* 在「寶可夢清單」版面中，「選單」版面裡的每項選項樣式 */
+#pokemonList > div.menu > span.menu-item {
+    position: absolute;
+    font-size: var(--lg-font-size);
+    line-height: var(--lg-line-height);
+
+    /* 清單內每項選項的設定: 「起始位置」、「間距」、「右偏」 */
+    --menu-item-start: 10px;
+    --menu-item-gap: 70px;
+    --menu-item-left: 65px;
+}
+
+/* 被選取後，顯示選項前的「三角形」圖示 */
+#pokemonList > div.menu > span.menu-item.select::before {
+    display:inline-block;
+    position: absolute;
+    top: 17px;  left: -35px;
+    content: '';
+    border-style: solid;
+    border-width: 0.3em 0 0.3em 0.5em;
+    border-color: transparent transparent transparent #000;
+}
+
+#pokemonList > div.menu > span.menu-item:nth-child(1) { top: var(--menu-item-start);  left: var(--menu-item-left); }
+#pokemonList > div.menu > span.menu-item:nth-child(2) { top: calc(var(--menu-item-start) + var(--menu-item-gap));  left: var(--menu-item-left); }
+#pokemonList > div.menu > span.menu-item:nth-child(3) { top: calc(var(--menu-item-start) + var(--menu-item-gap) * 2);  left: var(--menu-item-left); }
