修正字體被覆蓋

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-* {
+.mask{
     padding: 0;
     margin: 0;
     font-family: "Microsoft JhengHei UI Light","Noto Sans CJK TC Light","Microsoft YaHei UI Light","","Microsoft JhengHei",sans-serif;
