--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ body
     background-position: 0 -50px;
     height: 48px;
     width: 48px;
-
+    z-index: 99;
 }
 .nextPageButton {
     position: absolute;
@@ -215,6 +215,7 @@ body
     background-position: 0 0;
     height: 48px;
     width: 48px;
+    z-index: 99;
 
 }
 #playHelp[data-page="0"] .key,#playHelp[data-page="1"] .key
@@ -246,4 +247,16 @@ body
 #playHelp[data-page="2"] .pageContent
 {
     margin-right: -30px;
+}
+@media screen and (max-width:990px)
+{
+    .GB
+    {
+        display: none;
+    }
+    .right.mask,.left.mask
+    {
+        position: relative;
+        margin:0 auto;
+    }
 }
