--- a/start/css/HTMLObjectsContainer.css
+++ b/start/css/HTMLObjectsContainer.css
@@ -45,10 +45,17 @@
 }
 
 /*覆蓋窗共通設定*/
-.HTMLObjectContainer .illustration
+.HTMLObjectContainer .illustrationList,.HTMLObjectContainer .illustration
 {
     background-color:#f8f8f8;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    top:0;
+    left: 0;
 }
+
 /*對話框*/
 .dialog
 {
@@ -153,32 +160,54 @@
     border-width: 0.3em 0 0.3em 0.5em;
     border-color: transparent transparent transparent #000;
 }
-/*圖鑑*/
-.illustration
+/*整頁覆蓋窗設定*/
+.illustrationList
 {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    overflow: hidden;
-    top:0;
-    left: 0;
-    z-index: 10;
+   z-index: 10;
 }
-.illustration .illustrationList
+
+.illustrationList .list
 {
     position: absolute;
-    max-height: 100%;
+    max-height: calc(100% - 20px);
     left: 10px;
     top:10px;
     max-width: calc(100% - 20px);
     overflow: hidden;
     z-index: 0;
 }
-.illustration .illustrationNumbers
+.illustrationList .illustrationNumbers
 {                   
     position: absolute;
     font-size: 1em;
     right: 10px;
     top:10px;
     z-index: 1;
+}
+.illustration
+{
+    z-index: 11;
+    text-align:center;
+}
+.illustration .image
+{
+    position: absolute;
+    left: 0;
+    width: 50%;
+}
+.illustration .basicInfo
+{
+    height: 40%;
+}
+.illustration .basicInfo .basicInfoRight
+{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 50%;
+    height: 50%;
+}
+.illustration .description
+{
+    height: 60%;
 }
